force-app/main/default/objects/Case/fields/Contract_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Contract_Purchase_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract /Purchase Order</label>
    <type>Checkbox</type>
</CustomField>