force-app/main/default/objects/Case/fields/COST_VALUE_OF_PRODUCT__c.field-meta.xml
<CustomField>
    <fullName>COST_VALUE_OF_PRODUCT__c</fullName>
    <label>COST VALUE OF PRODUCT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>