force-app/main/default/objects/Case/fields/CPQ_Invoice__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPQ Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>