force-app/main/default/objects/Case/fields/CreatedbyCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>CreatedbyCurrentUser__c</fullName>
    <formula>IF(  CreatedById  = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedbyCurrentUser</label>
    <type>Checkbox</type>
</CustomField>