force-app/main/default/objects/Case/fields/Credit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Credit_Comments__c</fullName>
    <label>Credit Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>