force-app/main/default/objects/Case/fields/Credit_Line_Requested__c.field-meta.xml
<CustomField>
    <fullName>Credit_Line_Requested__c</fullName>
    <label>Credit Line Requested</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>