force-app/main/default/objects/Case/fields/Credit_Solutions_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Credit_Solutions_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Solutions Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cases (Credit Solutions Specialist)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>