force-app/main/default/objects/Case/fields/CRT__c.field-meta.xml
<CustomField>
    <fullName>CRT__c</fullName>
    <label>Credit/Chargeback Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Request__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D1-Builder charged in Error</fullName>
            </value>
            <value>
                <fullName>D2-Damaged Mdse</fullName>
            </value>
            <value>
                <fullName>D3-Did not receive Mdse</fullName>
            </value>
            <value>
                <fullName>D4-Duplicate Sales/Billing</fullName>
            </value>
            <value>
                <fullName>D5-Incorrect Purchase Order#</fullName>
            </value>
            <value>
                <fullName>D6-Invoice Detail Needed</fullName>
            </value>
            <value>
                <fullName>D7-Legacy</fullName>
            </value>
            <value>
                <fullName>D8-Merchandise Cancelled</fullName>
            </value>
            <value>
                <fullName>D9-No/Incorrect Purchase Order</fullName>
            </value>
            <value>
                <fullName>D10-Partial discount</fullName>
            </value>
            <value>
                <fullName>D11-Payment Sent to Merchant</fullName>
            </value>
            <value>
                <fullName>D12-Payment Sent to Sears</fullName>
            </value>
            <value>
                <fullName>D13-Pricing</fullName>
            </value>
            <value>
                <fullName>D14-Pricing Dispute</fullName>
            </value>
            <value>
                <fullName>D15-Pricing Service</fullName>
            </value>
            <value>
                <fullName>D16-Proof of Delivery</fullName>
            </value>
            <value>
                <fullName>D17-Return material Authorization</fullName>
            </value>
            <value>
                <fullName>D18-Shipping &amp; Freight</fullName>
            </value>
            <value>
                <fullName>D19-Signature Request</fullName>
            </value>
            <value>
                <fullName>D20-Small Balance Charge Off</fullName>
            </value>
            <value>
                <fullName>D21-Tax</fullName>
            </value>
            <value>
                <fullName>D22-Unauthorized Buyer</fullName>
            </value>
            <value>
                <fullName>D23-Unauthorized Mdse Sold</fullName>
            </value>
            <value>
                <fullName>D24-Under Warranty</fullName>
            </value>
            <value>
                <fullName>D25-Transcation Amt Differs</fullName>
            </value>
            <value>
                <fullName>D26-Poor Service</fullName>
            </value>
            <value>
                <fullName>D27-Unidentified Sale</fullName>
            </value>
            <value>
                <fullName>D28-Require Auth</fullName>
            </value>
            <value>
                <fullName>D29-Customer Disputes Merchandise</fullName>
            </value>
            <value>
                <fullName>D30-Declined Authorization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>