force-app/main/default/objects/Case/fields/CSI_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>CSI_Issue_Type__c</fullName>
    <description>Describes the type of issue that needs to be addressed by the CSI Team</description>
    <inlineHelpText>Describes the type of issue that needs to be addressed by the CSI Team</inlineHelpText>
    <label>CSI Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Freight Lane Issue</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>