force-app/main/default/objects/Case/fields/Current_Owner_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner_Assigned__c</fullName>
    <label>Current Owner Assigned</label>
    <type>DateTime</type>
</CustomField>