force-app/main/default/objects/Case/fields/current_user_css_on_account__c.field-meta.xml
<CustomField>
    <fullName>current_user_css_on_account__c</fullName>
    <formula>IF( Account.CSS__c  = $User.Id, True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is CSS on Account?</label>
    <type>Checkbox</type>
</CustomField>