force-app/main/default/objects/Case/fields/cust_po__c.field-meta.xml
<CustomField>
    <fullName>cust_po__c</fullName>
    <label>Customer PO #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>