force-app/main/default/objects/Case/fields/Customer_Booth_Display__c.field-meta.xml
<CustomField>
    <fullName>Customer_Booth_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Booth Size Greater Than 10x10</inlineHelpText>
    <label>Customer Booth Display</label>
    <type>Checkbox</type>
</CustomField>