force-app/main/default/objects/Case/fields/Customer_Success_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Specialist__c</fullName>
    <formula>Account.CSS__r.FirstName &amp;&quot; &quot; &amp;Account.CSS__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Success Specialist</label>
    <type>Text</type>
</CustomField>