force-app/main/default/objects/Case/fields/Date_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Date_Purchased__c</fullName>
    <description>Date purchased</description>
    <label>Date Purchased</label>
    <type>Date</type>
</CustomField>