force-app/main/default/objects/Case/fields/Date_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Resolved__c</fullName>
    <label>Date Resolved</label>
    <type>Date</type>
</CustomField>