force-app/main/default/objects/Case/fields/DAUGHTER_UNIT__c.field-meta.xml
<CustomField>
    <fullName>DAUGHTER_UNIT__c</fullName>
    <label>DAUGHTER UNIT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>