force-app/main/default/objects/Case/fields/Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>Delivery_City__c</fullName>
    <label>Delivery City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>