force-app/main/default/objects/Case/fields/Delivery_Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Date Changed</label>
    <type>Checkbox</type>
</CustomField>