force-app/main/default/objects/Case/fields/delivery_instructions__c.field-meta.xml
<CustomField>
    <fullName>delivery_instructions__c</fullName>
    <label>Delivery Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>