force-app/main/default/objects/Case/fields/Delivery_Street__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Street__c</fullName>
    <label>Delivery Street</label>
    <length>244</length>
    <type>Text</type>
</CustomField>