force-app/main/default/objects/Case/fields/Delivery_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Zip_Code__c</fullName>
    <label>Delivery Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>