force-app/main/default/objects/Case/fields/dos_order_no__c.field-meta.xml
<CustomField>
    <fullName>dos_order_no__c</fullName>
    <label>Delivery Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>