force-app/main/default/objects/Case/fields/DOS_UNIT__c.field-meta.xml
<CustomField>
    <fullName>DOS_UNIT__c</fullName>
    <label>DOS UNIT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>