force-app/main/default/objects/Case/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Date the customer meeting is setup or the date you need the information back by</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>