force-app/main/default/objects/Case/fields/Effort_Needed__c.field-meta.xml
<CustomField>
    <fullName>Effort_Needed__c</fullName>
    <label>Effort Needed(hours)</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>