force-app/main/default/objects/Case/fields/Escalate_to_CSI_Team__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_CSI_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Commercial Support use only</description>
    <inlineHelpText>Commercial Support use only</inlineHelpText>
    <label>Escalate to CSI Team</label>
    <type>Checkbox</type>
</CustomField>