force-app/main/default/objects/Case/fields/Escalate_to_Inventory_Replenishment__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_Inventory_Replenishment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Administrator use only</inlineHelpText>
    <label>Escalate to Inventory Replenishment</label>
    <type>Checkbox</type>
</CustomField>