force-app/main/default/objects/Case/fields/Escalate_to_Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_Product_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Administrator use only</inlineHelpText>
    <label>Escalate to Product Manager</label>
    <type>Checkbox</type>
</CustomField>