force-app/main/default/objects/Case/fields/Expected_Cost__c.field-meta.xml
<CustomField>
    <fullName>Expected_Cost__c</fullName>
    <label>Expected Cost</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under $500</fullName>
            </value>
            <value>
                <fullName>$500 - $1,000</fullName>
            </value>
            <value>
                <fullName>$1,000 - $5,000</fullName>
            </value>
            <value>
                <fullName>$5,000 - $10,000</fullName>
            </value>
            <value>
                <fullName>Over $10,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>