force-app/main/default/objects/Case/fields/Expected_ROI__c.field-meta.xml
<CustomField>
    <fullName>Expected_ROI__c</fullName>
    <label>Expected ROI($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>