force-app/main/default/objects/Case/fields/File_Format__c.field-meta.xml
<CustomField>
    <fullName>File_Format__c</fullName>
    <description>File format for high resolution logo requests</description>
    <inlineHelpText>Select the image format for high resolution logo requests</inlineHelpText>
    <label>File Format</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JPEG</fullName>
            </value>
            <value>
                <fullName>TIFF</fullName>
            </value>
            <value>
                <fullName>ETS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>