force-app/main/default/objects/Case/fields/Final_Credit_Response__c.field-meta.xml
<CustomField>
    <fullName>Final_Credit_Response__c</fullName>
    <label>Final Credit Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved by Citi</fullName>
            </value>
            <value>
                <fullName>Approved by Blue Tarp</fullName>
            </value>
            <value>
                <fullName>Approved by Recourse</fullName>
            </value>
            <value>
                <fullName>Approved Blue Tarp Service Account</fullName>
            </value>
            <value>
                <fullName>Approved Exception Service Account BT</fullName>
            </value>
            <value>
                <fullName>Credit Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>