force-app/main/default/objects/Case/fields/Financials__c.field-meta.xml
<CustomField>
    <fullName>Financials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financials</label>
    <type>Checkbox</type>
</CustomField>