force-app/main/default/objects/Case/fields/First_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>First_Status_Update__c</fullName>
    <description>Date/time stamps the first status change to calculate the case response time</description>
    <label>First Status Update</label>
    <type>DateTime</type>
</CustomField>