force-app/main/default/objects/Case/fields/Flyer_or_Brochure_Name__c.field-meta.xml
<CustomField>
    <fullName>Flyer_or_Brochure_Name__c</fullName>
    <inlineHelpText>Provide the name of the item that you want to customize</inlineHelpText>
    <label>Flyer or Brochure Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>