force-app/main/default/objects/Case/fields/High_Level_Project_Description__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Project_Description__c</fullName>
    <label>High Level Project Description</label>
    <type>TextArea</type>
</CustomField>