force-app/main/default/objects/Case/fields/Hybrid_Store__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Store__c</fullName>
    <inlineHelpText>If Freight Lane issue in a Hybrid is the root cause then the CSI Team will indicate which store location is involved.</inlineHelpText>
    <label>Hybrid Store #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>