force-app/main/default/objects/Case/fields/If_no_reason_why__c.field-meta.xml
<CustomField>
    <fullName>If_no_reason_why__c</fullName>
    <label>If no, reason why</label>
    <length>255</length>
    <type>Text</type>
</CustomField>