force-app/main/default/objects/Case/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <description>This field is to explain the issue you are having with the product</description>
    <inlineHelpText>This field is to explain the issue you are having with the product</inlineHelpText>
    <label>Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>