force-app/main/default/objects/Case/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <inlineHelpText>Please enter multiple item numbers separated by a comma.</inlineHelpText>
    <label>Item #</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>