force-app/main/default/objects/Case/fields/Last_Recovery_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Recovery_Date__c</fullName>
    <label>Last Recovery Date</label>
    <type>Date</type>
</CustomField>