force-app/main/default/objects/Case/fields/Legacy_Customer_Service_Record__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Customer_Service_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy Customer Service Record</label>
    <referenceTo>Customer_Service__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>