force-app/main/default/objects/Case/fields/Link_to_the_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_to_the_Record__c</fullName>
    <description>Link to the record causing the user an issue/prompting the user to submit the case</description>
    <inlineHelpText>Copy and paste the Salesforce link to the record for which you are submitting this case.</inlineHelpText>
    <label>Link to the Record</label>
    <type>Url</type>
</CustomField>