force-app/main/default/objects/Case/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <label>Log #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>