force-app/main/default/objects/Case/fields/Market_Delivery_Manager_Contact__c.field-meta.xml
<CustomField>
    <fullName>Market_Delivery_Manager_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Delivery Manager Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Market Delivery Manager Contact)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>