force-app/main/default/objects/Case/fields/Material_Request__c.field-meta.xml
<CustomField>
    <fullName>Material_Request__c</fullName>
    <label>Material Request</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Package</fullName>
            </value>
            <value>
                <fullName>Flyer</fullName>
            </value>
            <value>
                <fullName>Customer Presentation</fullName>
            </value>
            <value>
                <fullName>Digital Catalog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>