force-app/main/default/objects/Case/fields/MDO_Contact__c.field-meta.xml
<CustomField>
    <fullName>MDO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDO Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>