force-app/main/default/objects/Case/fields/MDO_Status__c.field-meta.xml
<CustomField>
    <fullName>MDO_Status__c</fullName>
    <label>MDO Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No POD Required</fullName>
            </value>
            <value>
                <fullName>Found in Portal</fullName>
            </value>
            <value>
                <fullName>Found Manually</fullName>
            </value>
            <value>
                <fullName>Back Charge Not Found</fullName>
            </value>
            <value>
                <fullName>Back Charge Illegible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>