force-app/main/default/objects/Case/fields/Net_Chargeback_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Chargeback_Amount__c</fullName>
    <formula>Chargeback_Amount__c - Recovery_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Chargeback Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>