force-app/main/default/objects/Case/fields/New_Feature_Benefits__c.field-meta.xml
<CustomField>
    <fullName>New_Feature_Benefits__c</fullName>
    <description>Description of benefits of new feature requests in SAP.</description>
    <inlineHelpText>Describe the benefits of your required new feature.</inlineHelpText>
    <label>New Feature Benefits</label>
    <type>TextArea</type>
</CustomField>