force-app/main/default/objects/Case/fields/New_Trade_Show_Request__c.field-meta.xml
<CustomField>
    <fullName>New_Trade_Show_Request__c</fullName>
    <label>New Trade Show Request</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booth Display (Booth size &lt; 10x10)</fullName>
            </value>
            <value>
                <fullName>Booth Display (Booth size &gt; 10x10)</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Program Ad</fullName>
            </value>
            <value>
                <fullName>Show Deal</fullName>
            </value>
            <value>
                <fullName>Collateral</fullName>
            </value>
            <value>
                <fullName>Raffle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>