force-app/main/default/objects/Case/fields/On_Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_Of__c</fullName>
    <description>For cases opened by business systems team for a user</description>
    <label>On Behalf Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>