force-app/main/default/objects/Case/fields/Order_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Create_Date__c</fullName>
    <formula>Order__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Create Date</label>
    <type>DateTime</type>
</CustomField>