force-app/main/default/objects/Case/fields/Order_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Order_Created_By__c</fullName>
    <formula>Order__r.CreatedBy.FirstName &amp;&quot; &quot;&amp;Order__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Created By</label>
    <type>Text</type>
</CustomField>