force-app/main/default/objects/Case/fields/order_no__c.field-meta.xml
<CustomField>
    <fullName>order_no__c</fullName>
    <label>DOS Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>