force-app/main/default/objects/Case/fields/Owner_Creator__c.field-meta.xml
<CustomField>
    <fullName>Owner_Creator__c</fullName>
    <formula>OR( 
CreatedBy.Id =  $User.Id,
 OwnerId = $User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner/Creator</label>
    <type>Checkbox</type>
</CustomField>