force-app/main/default/objects/Case/fields/pendcode__c.field-meta.xml
<CustomField>
    <fullName>pendcode__c</fullName>
    <label>Pend Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>