force-app/main/default/objects/Case/fields/Pending_Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Sale_Amount__c</fullName>
    <label>Pending Sale Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>