force-app/main/default/objects/Case/fields/PID_s_or_SAP_Number_s__c.field-meta.xml
<CustomField>
    <fullName>PID_s_or_SAP_Number_s__c</fullName>
    <description>Product ID or SAP Number</description>
    <inlineHelpText>11-digits, i.e., 02270211000
Separate multiple PIDs or SAP Numbers by a semi-colon, i.e., 02270211000; 02270212000</inlineHelpText>
    <label>PID(s) or SAP Number(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>