force-app/main/default/objects/Case/fields/POD_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>POD_Requested_Date__c</fullName>
    <inlineHelpText>Date the request was sent to Innovel Team</inlineHelpText>
    <label>POD Requested Date</label>
    <type>Date</type>
</CustomField>