force-app/main/default/objects/Case/fields/postal__c.field-meta.xml
<CustomField>
    <fullName>postal__c</fullName>
    <label>Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>