force-app/main/default/objects/Case/fields/Potential_Annual_Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>Potential_Annual_Sales_Volume__c</fullName>
    <formula>Text(Account.Potential_Annual_Sales_Volume__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Annual Sales Volume</label>
    <type>Text</type>
</CustomField>