force-app/main/default/objects/Case/fields/Pre_Delivery_Case__c.field-meta.xml
<CustomField>
    <fullName>Pre_Delivery_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Delivery Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Pre-Delivery Case)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>