force-app/main/default/objects/Case/fields/Pre_Delivery_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Pre_Delivery_Initiated__c</fullName>
    <inlineHelpText>The date the case was created from the intake case (if Applicable)</inlineHelpText>
    <label>Initiated from Intake</label>
    <type>DateTime</type>
</CustomField>